tests/cfg/js/success/parse_regex8.js
a = b
/hi/g.exec(c).map(d);
