tests/cfg/js/error/parse/parse_XXXasi5.js
/* from ECMAScript 5.0 */
for (a; b
     )
